--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
+        "joi": "^17.4.0",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.5.9",
         "mongoose": "^5.9.21",
